--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 	<head>
 		<title>Stray Shots</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<!--jquery 2.0 -->
+		<script src="assets/jquery.js"></script>
 		
+		<!--styles -->
+		<link rel="stylesheet" href="assets/css/style.css">
+		
+		<!--scripts -->
 		<script src="assets/game.js"></script>
 		<script src="assets/init.js"></script>
 		
