--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 		
 		<!--scripts -->
+		<script src="assets/events.js"></script>
+		<script src="assets/player.js"></script>
 		<script src="assets/game.js"></script>
 		<script src="assets/init.js"></script>
 		
