Jumping, falling, crouching, COLLISIONS

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 		<!--styles -->
 		<link rel="stylesheet" href="assets/css/style.css">
 		
+		<!--scripts-objects-->
+		<script src="assets/objects/box.js"></script>
+		
 		<!--scripts -->
 		<script src="assets/events.js"></script>
+		<script src="assets/loader.js"></script>
 		<script src="assets/player.js"></script>
 		<script src="assets/game.js"></script>
 		<script src="assets/init.js"></script>
