Events improved, box texture added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		
 		<!--scripts-objects-->
 		<script src="assets/objects/box.js"></script>
+		<script src="assets/objects/ground.js"></script>
 		
 		<!--scripts -->
 		<script src="assets/events.js"></script>
