Background, cursor, music

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<!--scripts-objects-->
 		<script src="assets/objects/box.js"></script>
 		<script src="assets/objects/ground.js"></script>
+		<script src="assets/background.js"></script>
+		<script src="assets/sound.js"></script>
 		
 		<!--scripts -->
 		<script src="assets/events.js"></script>
