--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 		<link rel="stylesheet" href="assets/css/style.css">
 		
 		<!--scripts-objects-->
+        <script src="assets/shot.js"></script>
 		<script src="assets/objects/box.js"></script>
 		<script src="assets/objects/ground.js"></script>
 		<script src="assets/background.js"></script>
-		<script src="assets/sound.js"></script>
-		
+
 		<!--scripts -->
+        <script src="assets/sound.js"></script>
 		<script src="assets/events.js"></script>
 		<script src="assets/loader.js"></script>
 		<script src="assets/player.js"></script>
