--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Stray Shots</title>
+		<title>Smurf Defence</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<!--jquery 2.0 -->
-		<script src="assets/jquery.js"></script>
+		<script src="assets/libs/jquery.js"></script>
 		
 		<!--styles -->
 		<link rel="stylesheet" href="assets/css/style.css">
 		
 		<!--scripts-objects-->
-        <script src="assets/shot.js"></script>
 		<script src="assets/objects/box.js"></script>
 		<script src="assets/objects/ground.js"></script>
-		<script src="assets/background.js"></script>
+
+        <script src="assets/shot.js"></script>
+        <script src="assets/bomb.js"></script>
 
 		<!--scripts -->
         <script src="assets/sound.js"></script>
 		<script src="assets/events.js"></script>
+        <script src="assets/explosion.js"></script>
 		<script src="assets/loader.js"></script>
 		<script src="assets/player.js"></script>
 		<script src="assets/game.js"></script>
