Structure remake, big changes, throwing prototype

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 		<script src="assets/objects/box.js"></script>
 		<script src="assets/objects/ground.js"></script>
 
-        <script src="assets/shot.js"></script>
-        <script src="assets/bomb.js"></script>
+		<!--throwing -->
+        <script src="assets/throwing/throwing.js"></script>
+        <script src="assets/throwing/shot.js"></script>
+        <script src="assets/throwing/bomb.js"></script>
 
-		<!--scripts -->
+        <!--scripts -->
         <script src="assets/sound.js"></script>
-		<script src="assets/events.js"></script>
         <script src="assets/explosion.js"></script>
 		<script src="assets/loader.js"></script>
 		<script src="assets/player.js"></script>
