Menu, waves, npcs

--- a/index.html
+++ b/index.html
@@ -19,10 +19,16 @@
         <script src="assets/throwing/bomb.js"></script>
 
         <!--scripts -->
+        <script src="assets/gui/gui.js"></script>
+        <script src="assets/gui/health.js"></script>
+        <script src="assets/gui/wavebutton.js"></script>
         <script src="assets/sound.js"></script>
         <script src="assets/explosion.js"></script>
 		<script src="assets/loader.js"></script>
+        <script src="assets/waves.js"></script>
+        <script src="assets/figure.js"></script>
 		<script src="assets/player.js"></script>
+        <script src="assets/npc.js"></script>
 		<script src="assets/game.js"></script>
 		<script src="assets/init.js"></script>
 		
