--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <!--scripts -->
         <script src="assets/gui/gui.js"></script>
         <script src="assets/gui/health.js"></script>
+        <script src="assets/gui/towerhealth.js"></script>
         <script src="assets/gui/wavebutton.js"></script>
         <script src="assets/sound.js"></script>
         <script src="assets/explosion.js"></script>
